--- a/_posts/2019-07-14-the-us-narrative-today.html
+++ b/_posts/2019-07-14-the-us-narrative-today.html
@@ -2504,107 +2504,107 @@ stories:
   domain: http://www.cgsentinel.com/
   link: https://cgsentinel.com/article/school-board-selects-firm-for-superintendent-search-narrows-interim-field
 images:
-- name: old-church-oldchurch-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-emily-carr.jpg
-- name: old-gas-pumps-oldgaspumps-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-smooth-ride.jpg
-- name: beach-clouds-lifeguard-beachclouds-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-blue-electricity.jpg
-- name: oldsmallboat-oldsmallboat-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-plentiful.jpg
-- name: cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-blocks.jpg
-- name: adam-smith-adam-smith-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit-2.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-00-00.jpg
-- name: old-door-lock-old-door-lock-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-brush.jpg
-- name: aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still-1200.png
-- name: server-cloud-server-racks-door-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dark-soul.jpg
-- name: castle-wall-DSC-0067-satan-red.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-satan-red.JPG
-- name: store-on-corner-store-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-post-modern.jpg
-- name: stories-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-smoking-cigarette.jpg
-- name: udnie-IMG_7319.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7319.jpg
-- name: old-door-lock-old-door-lock-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-clean-view.jpg
-- name: san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-- name: server-cloud-server-racks-clouds-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-copper-circuit.jpg
-- name: gypsy-wagon-gypsywagon-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-yellow-paper.jpg
-- name: fence-fence-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-far-away.jpg
-- name: wind-mills-windmills-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-matrix.jpg
-- name: white-house-lawn-white-house-window-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colored-circuits.jpg
-- name: fence-mexico-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-plentiful.jpg
-- name: art-museum-art-museum-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-wols.jpg
-- name: power-lines-power-lines-empty-space-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-clean-view.jpg
-- name: docks-docks-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-dresden.jpg
-- name: supreme-court-supremecourt-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-constitution.jpg
-- name: old-door-lock-old-door-lock-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colored-circuits.jpg
-- name: fence-fence-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-colorful-blocks.jpg
-- name: mistywoods-babyfoot-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-creativity.jpg
-- name: stories-new-16-38-600-500-0-avg-1-1-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-38-600-500-0-avg-1-1-1.jpg
-- name: server-cloud-server-racks-door-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-emily-carr.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-missle.JPG
-- name: berlinwall-DSC-0084-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-spagetti-accident.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-purple-pond.jpg
-- name: crow_dark_pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
-- name: locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-alberto-giacometti.jpg
-- name: oldhotel-oldhotel-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-blue-brush.jpg
-- name: amusement-park-amusement-park-2-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-neo-instinct.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-atari-asteroids.jpg
-- name: machine-road-machine-road-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-3.jpg
-- name: server-cloud-server-racks-door-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
-- name: windowmountain-window-mountain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-asteroids.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-5.jpg
-- name: oldcabin-store-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-light-dali.jpg
-- name: white-house-lawn-white-house-window-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
-- name: razorcliff-razorcliff-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
-- name: oldtrain-oldtrain-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-oily-mcoilface.jpg
-- name: dragon-desert-desert-dragon-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-crafty-painting.jpg
-- name: beach-rocks-beach-rocks-currents-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-satan-red.jpg
-- name: amusement-park-amusement-park-2-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-attack-planes.jpg
-- name: death-valley-death-valley-national-park-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-brush.jpg
+- name: liberty-back-statue-liberty-back.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-3.jpg
+- name: stories-new-old-door-lock-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-smoking-cigarette.jpg
+- name: walled-garden-walled-garden-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-kandinsky-bv.jpg
+- name: flower-barbed-wire-flower-barbed-wire-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-bright-sand.jpg
+- name: aws-s3-stories-4882162452-fa3126b38d-b-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-4882162452-fa3126b38d-b-aqua.jpg
+- name: gears-4882162452-fa3126b38d-b-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kand-two.jpg
+- name: yosemite-yosemite-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-blue-brush.jpg
+- name: christianity-christianity-under-construction-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-purple-pond.jpg
+- name: oldhouse-oldhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-yellow-collage.jpg
+- name: old-granary-field-granaryfield-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-dali.jpg
+- name: crow-crow-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-rainbow-festival.jpg
+- name: aws-s3-square-file-00-00-35-50-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-35-50-square.jpg
+- name: legal-statue-legalstatue-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-post-modern.jpg
+- name: rockingchair-rockingchair-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-blue-granite.jpg
+- name: school-clouds-church-clouds-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-alien-goggles.jpg
+- name: walled-garden-walled-garden-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dali-two.jpg
+- name: containership-containership-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dali-two.jpg
+- name: window-window-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-mucha-mult.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-monet-one.jpg
+- name: berlinwall2-berlinwall-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-colorful-blocks.jpg
+- name: white-house-lawn-white-house-lawn-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-pond.jpg
+- name: old-house-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kandinsky-bv.jpg
+- name: rockingchair-face-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-emily-carr.jpg
+- name: sand-hand-sand-hand-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-smooth-ride.jpg
+- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+- name: rockingchair-face-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-blue-brush.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-china-prop.jpg
+- name: flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h.jpg
+- name: supreme-court-supremecourt-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gred-mash.jpg
+- name: oldhotel-oldhotel-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-pond.jpg
+- name: art-lange-otto-the-mocking-of-christ.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-lange-otto-the-mocking-of-christ.jpg
+- name: blossombar-dark-soul-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-24-99.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-dream.png
+- name: aws-s3-square-ellis-island-nazi-poster-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-ellis-island-nazi-poster-square.jpg
+- name: gears-4882162452-fa3126b38d-b-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-monet-one.jpg
+- name: soldier-kneeling-26307870940-76a7c658cd-k.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26307870940-76a7c658cd-k.jpg
+- name: catacombs-catacombs-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-jap-wav-pr.jpg
+- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
+- name: castle-wall-DSC-0067-bright-sand.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-bright-sand.JPG
+- name: white-house-lawn-white-house-lawn-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-rain.jpg
+- name: paris-paris-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-really-hot.jpg
+- name: miamibeach-miamibeach-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-marcel-duchamp.jpg
+- name: aws-s3-treeinhills-yellowtree-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still.jpg
+- name: old-church-oldchurch-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-bright-sand.jpg
+- name: catacombs-catacombs-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colorful-dream.jpg
+- name: nyc-flag-nycflag-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-crafty-painting.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-oily-mcoilface.jpg
+- name: curtain-curtain-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-internet-numbers.jpg
 ---
 Elberton Police Department To Offer Active Shooter Course.&nbsp;Spurs On At Ladonias 54th Rodeo.&nbsp;Havasu Man Spared Prison Term For Drug Convictions.&nbsp;Axelrod Presses Buttigieg About Fundraising Efforts.&nbsp;God Does Not Expect Parents To Show Favoritism.&nbsp;Lea Michele Pays Tribute To Cory Monteith.&nbsp;New State Election Laws Now In Effect.&nbsp;Union Square Subway Mugging.&nbsp;
