--- a/_posts/2019-07-13-the-us-narrative-today.html
+++ b/_posts/2019-07-13-the-us-narrative-today.html
@@ -2413,107 +2413,107 @@ stories:
   domain: http://www.thederrick.com/
   link: http://www.thederrick.com/sports/national_sports/kurt-busch-outduels-little-brother-to-win-at-kentucky/image_894ba9ca-3499-59af-9328-9160b30f6c7d.html
 images:
-- name: catacombs-catacombs-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-internet-numbers.jpg
-- name: beach-clouds-lifeguard-beachclouds-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-satan-red.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
-- name: razorcliff-razorcliff-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-deep-connections.jpg
-- name: white-house-lawn-white-house-lawn-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crafty-painting.jpg
-- name: bluelake-oily-mcoilface-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-00-38-67.jpg
-- name: oldcabin-store-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-purple-storm.jpg
-- name: fence-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence.jpg
-- name: trucksilo-trucksilo-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crunch-paper.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-rainbow-festival.jpg
-- name: mediterranean-mediterranean-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-mucha-mult.jpg
-- name: power-lines-power-lines-empty-space-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-light-dali.jpg
-- name: walled-garden-walled-garden-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-plentiful.jpg
-- name: old-granary-field-granaryfield-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-deep-connections.jpg
-- name: white-house-lawn-white-house-lawn-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-light-dali.jpg
-- name: stories-new-old-door-lock-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-old-door-lock-smoking-cigarette.jpg
-- name: store-on-corner-oldcabin-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-atari-missle.jpg
-- name: castle-wall-DSC-0067-internet-numbers.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-internet-numbers.JPG
-- name: status-berlin-status-berlin-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-brush.jpg
-- name: ellis-island-ellis-island-room-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-creativity.jpg
-- name: razorcliff-razorcliff-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-blue-granite.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-free-woman.jpg
-- name: beach-rocks-beach-rocks-currents-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-crabapple.jpg
-- name: windowmountain-window-mountain-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-soul.jpg
-- name: old-door-lock-old-door-lock-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-matrix.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-alberto-giacometti.jpg
-- name: white-house-whitehouse-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-mucha-mult.jpg
-- name: power-lines-power-lines-empty-space-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-rainbow-festival.jpg
-- name: aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-64-185-800-500-0-max-0-1--1.jpg
-- name: stories-christianity-under-construction-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-christianity-under-construction-atari-asteroids.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit-2.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit-2.png
-- name: gypsymosaic-gypsy-eyes-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-blue-electricity.jpg
-- name: old-granary-field-granaryfield-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-oily-mcoilface.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-satan-red.jpg
+- name: locked-up-steam-lock-up-steam-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-aqua.jpg
+- name: containership-containership-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-5.jpg
+- name: downtheline-downtheline-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-atari-asteroids.jpg
+- name: gypsymosaic-gypsy-eyes-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-smoking-cigarette.jpg
 - name: san-francisco-skyline-night-san-francisco-skyline-night-bright-sand.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-bright-sand.jpg
-- name: old-school-house-old-schoolhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-atari-missle.jpg
-- name: aws-s3-square-C2plAIxWIAAOSdD-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2plAIxWIAAOSdD-square.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-aqua.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-aqua.png
-- name: old-door-lock-old-door-lock-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
-- name: server-cloud-server-racks-door-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-oily-mcoilface.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-smoking-cigarette.png
-- name: crow_dark_pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
-- name: aws-s3-mountainlake-mountainlake-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-1200.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-bright-sand.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-granite.png
-- name: containership-containership-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-4.jpg
-- name: white-house-whitehouse-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-blue-circuit.jpg
-- name: gypsymosaic-gypsy-eyes-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-dry-skin.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
+- name: adam-smith-adam-smith-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-jap-dys-1.jpg
+- name: border-crossing-bordercrossing-graham-sutherland.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-graham-sutherland.png
+- name: stories-castle-on-hill-edinburgh-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-feed-people.JPG
+- name: server-cloud-server-racks-door-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-umberto-bocc.jpg
+- name: 35201856153_61bc075e4b-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-udnie.jpg
+- name: fence-fence-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sunday.jpg
+- name: server-cloud-server-racks-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-colorful-blocks.jpg
+- name: old-church-oldchurch-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alberto-giacometti.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-colored-circuits.jpg
+- name: aws-s3-royalroads-royalroads-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still.jpg
+- name: rockingchair-rockingchair-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-gan-vogh.jpg
+- name: cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+- name: bluelake-gred-mash-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-01-17-38.jpg
+- name: ellis-island-ellis-island-room-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-creativity.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: death-valley-death-valley-national-park-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-2-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dry-skin.jpg
+- name: old-school-house-old-schoolhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-paper.jpg
+- name: copper-circuit-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7162.jpg
+- name: oldhouse-oldhouse-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-attack-planes.jpg
+- name: old-house-oldhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dark-soul.jpg
+- name: razorwire-DSC-0080-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-nazi-poster.jpg
+- name: store-on-corner-store-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-colored-circuits.jpg
+- name: nyc-flag-nycflag-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-three.jpg
+- name: old-school-house-old-schoolhouse-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purp-paper.jpg
+- name: old-granary-field-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
+- name: white-house-lawn-white-house-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-really-hot.jpg
+- name: nazi-invasion-IMG_6968.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6968.jpg
+- name: berlinwall2-berlinwall-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-creativity.jpg
+- name: store-on-corner-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-green-zuma.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-4.png
+- name: yosemite-yosemite-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
+- name: legal-statue-legalstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-really-hot.jpg
+- name: death-valley-death-valley-national-park-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-dry-skin.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
+- name: mosaic-face-mosaic-face-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dry-skin.jpg
+- name: aws-s3-stories-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-crabapple.jpg
+- name: carry-load-carryload-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kand-two.jpg
+- name: mediterranean-mediterranean-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-purple-storm.jpg
+- name: locked-up-steam-lock-up-steam-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
+- name: white-house-lawn-white-house-window-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-smoking-cigarette.jpg
+- name: castle-wall-DSC-0067-far-away.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-far-away.JPG
+- name: old-church-oldchurch-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-gan-vogh.jpg
+- name: machine-road-machine-road-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-attack-planes.jpg
+- name: meadowbutterfly-meadow-butterfly-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-mucha-mult.jpg
+- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
 ---
 Twins Double Down In Fairbanks.&nbsp;Second Brother Arrested In Sunrise Fatal Shooting.&nbsp;Roy Joins The Henry Clay.&nbsp;Clashes Erupt As Hong Kong Protest Targets Chinese Traders.&nbsp;Sign Up For Back To School Shoes And Coat Program.&nbsp;Industrial Fire Precaution Level Increases In Southeast Washington.&nbsp;Glennon Boo Royalty.&nbsp;Female Inmate Escaped Lucas County Jail, Shortly Brought Back To Custody.&nbsp;
